deploy/cloud/motor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motor
  labels:
    app: motor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: motor
  template:
    metadata:
      labels:
        app: motor
    spec:
      containers:
        - name: motor
          image: ghcr.io/juandavidturriago/mancala-motor:515aac695ae7baad380d6c40d8642c07bebdccdd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "2000m"
              memory: "768Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: motor
spec:
  selector:
    app: motor
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
